# rust-bgfx-experiment

./: Cargo.toml  readme.md
.github/workflows/: rust-clippy.yml
src/: main.rs
src/application/: mod.rs
src/platform/: error.rs  events.rs  keys.rs  logging.rs  logging_macros.rs  mod.rs  renderer.rs  window.rs
src/platform/ecs/: component.rs  entity.rs  mod.rs  system.rs
src/platform/scene/: scene.rs  scene_manager.rs
