[package]
name = "rust-bgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgfx-rs = "0.18"
raw-window-handle = "0.4"
sdl2 = { version = "0.35.2", features = ["raw-window-handle"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
